<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yalantis.MainActivity"
    android:clickable="false">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headline"
                    android:id="@+id/textView"
                    style="@style/headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/textView2"
                    style="@style/status" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView11"
                style="@style/borderline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createText"
                    android:id="@+id/textView3"
                    style="@style/listText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createDate"
                    android:id="@+id/textView4"
                    style="@style/listDate" />
            </RelativeLayout>

            <TextView
                style="@style/borderline"
                android:id="@+id/textView12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationText"
                    android:id="@+id/textView5"
                    style="@style/listText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrationDate"
                    android:id="@+id/textView6"
                    style="@style/listDate" />
            </RelativeLayout>

            <TextView
                style="@style/borderline"
                android:id="@+id/textView13" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadlineText"
                    android:id="@+id/textView7"
                    style="@style/listText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadlineDate"
                    android:id="@+id/textView8"
                    style="@style/listDate" />
            </RelativeLayout>

            <TextView
                style="@style/borderline"
                android:id="@+id/textView14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsibleText"
                    android:id="@+id/textView9"
                    style="@style/listText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsibleOrganization"
                    android:id="@+id/textView10"
                    style="@style/listDate" />
            </RelativeLayout>

            <TextView
                style="@style/borderline"
                android:id="@+id/textView15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainText"
                android:id="@+id/textView16"
                style="@style/mainText" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerView" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
